@@ -5,15 +5,17 @@ Instances of these classes are called dataset objects.
 
 import logging
 
-from rasterio._base import (
-    get_dataset_driver, driver_can_create, driver_can_create_copy)
-from rasterio._io import (
-    DatasetReaderBase, DatasetWriterBase, BufferedDatasetWriterBase,
-    MemoryFileBase)
-from rasterio.windows import WindowMethodsMixin
-from rasterio.env import ensure_env, env_ctx_if_needed
-from rasterio.transform import TransformMethodsMixin
-from rasterio.path import UnparsedPath
+import rasterio._loading
+with rasterio._loading.add_gdal_dll_directories():
+    from rasterio._base import (
+        get_dataset_driver, driver_can_create, driver_can_create_copy)
+    from rasterio._io import (
+        DatasetReaderBase, DatasetWriterBase, BufferedDatasetWriterBase,
+        MemoryFileBase)
+    from rasterio.windows import WindowMethodsMixin
+    from rasterio.env import ensure_env, env_ctx_if_needed
+    from rasterio.transform import TransformMethodsMixin
+    from rasterio.path import UnparsedPath
 
 
 log = logging.getLogger(__name__)
