@@ -2,14 +2,16 @@
 
 import xml.etree.ElementTree as ET
 
-import rasterio
-from rasterio._warp import WarpedVRTReaderBase
-from rasterio.dtypes import _gdal_typename
-from rasterio.enums import MaskFlags
-from rasterio.env import env_ctx_if_needed
-from rasterio.path import parse_path
-from rasterio.transform import TransformMethodsMixin
-from rasterio.windows import WindowMethodsMixin
+import rasterio._loading
+with rasterio._loading.add_gdal_dll_directories():
+    import rasterio
+    from rasterio._warp import WarpedVRTReaderBase
+    from rasterio.dtypes import _gdal_typename
+    from rasterio.enums import MaskFlags
+    from rasterio.env import env_ctx_if_needed
+    from rasterio.path import parse_path
+    from rasterio.transform import TransformMethodsMixin
+    from rasterio.windows import WindowMethodsMixin
 
 
 class WarpedVRT(WarpedVRTReaderBase, WindowMethodsMixin,
